# com.github.rrthomas-lrexlib

./: CMakeLists.txt  build_artifact.py
lrexlib/: CMakeLists.txt  __README__.txt
lrexlib/copy_over/: CMakeLists.txt
lrexlib/installer/: install_linux.lua  install_windows.lua
lrexlib/installer/lua5.1/: lrexlib.xml
lrexlib/installer/lua5.4/: lrexlib.xml
